[IMP] Profile Page : Post Heading done

--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -47,10 +47,13 @@
       </ion-col>
     </ion-row>
 
-    <!-- Post -->
-    <ion-row >
-      <ion-label>Post</ion-label>
+    <!-- Post Heaing -->
+    <ion-row class="alignCenter topSpacing">
+    <ion-label id="postHeading">Posts</ion-label>
+   </ion-row>
 
+    <!-- Post -->
+    <ion-row class="topSpacing">
       <ion-card>
         <!-- Post Header -->
         <ion-card-header>
