[IMP] password-change-page : Popover completed
The popover of the settings page when password change is clicked is completed and checked for responsiveness.

--- a/src/app/pages/password-change/password-change.page.html
+++ b/src/app/pages/password-change/password-change.page.html
@@ -1,9 +1,34 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>password-change</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- Popover component content -->
+<ion-grid class="grid-top-distance">
+  <!-- Old password -->
+  <ion-row>
+      <ion-item>
+          <ion-input placeholder="Old Password"></ion-input>
+      </ion-item>
+  </ion-row>
 
-<ion-content>
+  <!-- New password -->
+  <ion-row>
+      <ion-item>
+          <ion-input placeholder="New Password"></ion-input>
+      </ion-item>
+  </ion-row>
 
-</ion-content>
+  <!-- Confirm password -->
+  <ion-row>
+      <ion-item>
+          <ion-input placeholder="Confirm Password"></ion-input>
+      </ion-item>
+  </ion-row>
+
+  <!-- Cancel and change password -->
+  <ion-row>
+      <ion-col col-6 >
+          <ion-button color="danger" class="cancel-button password-button" >Cancel</ion-button>
+        </ion-col>
+        
+        <ion-col col-6 >
+            <ion-button color="success" class="change-button password-button" >Change</ion-button>    
+        </ion-col>
+  </ion-row>
+</ion-grid>
