[IMP] CATEGORY: Loading Animation changed

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -41,7 +41,7 @@
         <!-- Next Button -->
         <ion-button
           color="dark"
-          (click)="openModal()"
+          (click)="updateCategory()"
           [disabled]="selectedCategories.length === 0"
           >Next</ion-button
         >
