--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,16 @@ ion-header,
 ion-footer {
   --ion-background-color: var(--ion-color-light);
 }
+
+.loading-spinner {
+  --background: #f0f0f0;
+  --backdrop-opacity: 0.7;
+}
+
+.loading-wrapper.sc-ion-loading-md {
+  border-radius: 50% !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+}
