[IMP] HOME: Plus Fab wired to open Post Modal

--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-button class="into-button" slot="end" fill="clear">
+    <ion-button class="into-button" slot="end" fill="clear" (click)="closeModal()">
       <ion-icon class="toolbar-icon" slot="icon-only" src="assets/icon/into.svg"></ion-icon>
     </ion-button>
   </ion-toolbar>
