--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -1,57 +1,96 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-button class="into-button" slot="end" fill="clear" (click)="closeModal()">
-      <ion-icon class="toolbar-icon" slot="icon-only" src="assets/icon/into.svg"></ion-icon>
+    <ion-button
+      class="into-button"
+      slot="end"
+      fill="clear"
+      (click)="closeModal()"
+    >
+      <ion-icon
+        class="toolbar-icon"
+        slot="icon-only"
+        src="assets/icon/into.svg"
+      ></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-grid>
+  <ion-grid>
+    <!-- avatar with name of the user -->
+    <ion-row>
+      <ion-col>
+        <ion-item lines="none" class="avatar-name">
+          <ion-avatar slot="start">
+            <img
+              src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+            />
+          </ion-avatar>
+          <ion-label>Poorvasha</ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
 
-      <!-- avatar with name of the user -->
-      <ion-row>
-        <ion-col col-4 class="circle-avatar"></ion-col>
-        <ion-col col-6 class="circle-name">Poorvasha</ion-col>
-      </ion-row>
+    <!-- selecting the type of category -->
+    <ion-row>
+      <ion-col col-12>
+        <ion-item class="select-item">
+          <ion-select
+            placeholder="Category"
+            [interfaceOptions]="customAlertOptions"
+            interface="alert"
+            class="select-category"
+            okText="Ok"
+          >
+            <ion-select-option value="Science">Science</ion-select-option>
+            <ion-select-option value="Technology">Technology</ion-select-option>
+            <ion-select-option value="Sports">Sports</ion-select-option>
+            <ion-select-option value="Politics">Politics</ion-select-option>
+            <ion-select-option value="Finance">Finance</ion-select-option>
+            <ion-select-option value="Education">Education</ion-select-option>
+            <ion-select-option value="Entertainment"
+              >Entertainment</ion-select-option
+            >
+            <ion-select-option value="Agriculture"
+              >Agriculture</ion-select-option
+            >
+          </ion-select>
+        </ion-item>
+      </ion-col>
+    </ion-row>
 
-      <!-- selecting the type of category -->
-      <ion-row>
-        <ion-col col-12>
-          <ion-item  class="select-item">
-            <ion-select placeholder="Category" [interfaceOptions]="customAlertOptions" interface="alert" class="select-category" okText="Ok">
-              <ion-select-option value="Science">Science</ion-select-option>
-              <ion-select-option value="Technology">Technology</ion-select-option>
-              <ion-select-option value="Sports">Sports</ion-select-option>
-              <ion-select-option value="Politics">Politics</ion-select-option>
-              <ion-select-option value="Finance">Finance</ion-select-option>
-              <ion-select-option value="Education">Education</ion-select-option>
-              <ion-select-option value="Entertainment">Entertainment</ion-select-option>
-              <ion-select-option value="Agriculture">Agriculture</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      
-      <!-- Entering the users thoughts -->
-      <ion-row>
-        <ion-col>
-          <ion-item class="comments-item" lines="none">
-            <ion-textarea autoGrow="false" autosize rows="18" placeholder="Express your thoughts..."></ion-textarea>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <!-- Entering the users thoughts -->
+    <ion-row>
+      <ion-col>
+        <ion-item class="comments-item" lines="none">
+          <ion-textarea
+            autoGrow="false"
+            autosize
+            [attr.rows]="textAreaRows"
+            placeholder="Express your thoughts..."
+          ></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <!-- Footer with two icons -->
 <ion-footer class="ion-no-border">
   <ion-toolbar>
     <ion-button class="footer-button-photo" slot="start" fill="clear">
-      <ion-icon class="footer-icon" slot="icon-only" src="assets/icon/post-photo.svg"></ion-icon>
+      <ion-icon
+        class="footer-icon"
+        slot="icon-only"
+        src="assets/icon/post-photo.svg"
+      ></ion-icon>
     </ion-button>
     <ion-button class="footer-button-Go" slot="end" fill="clear">
-      <ion-icon class="footer-icon" slot="icon-only" src="assets/icon/Go.svg"></ion-icon>
+      <ion-icon
+        class="footer-icon"
+        slot="icon-only"
+        src="assets/icon/Go.svg"
+      ></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-footer>
