--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,32 +1,202 @@
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
-<ion-content fullscreen>
-  <h1>Welcome Back!</h1>
-  <div class="center">
+6<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+         <br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
 
-    <form [formGroup]="slideOneForm">
-    <!-- Username input -->
-    <div class="email">
-      <ion-item>
-        <ion-label position="floating">Email ID</ion-label>
-        <ion-input formControlName="email" type="Email"></ion-input>
-      </ion-item>
-    </div>
+      </ion-col>
+      <ion-col size="8">
+        <h1 class="heading">Welcome Back!</h1>
+      </ion-col>
+      
+      <ion-col size="2">
 
-      <!-- Password input -->
-      <div class="password">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size=3></ion-col>
+      <ion-col size="6">
+        <br><br>
+      <img src="../../../assets/NewLogoFinal.png">
+      <br><br>
+    </ion-col>
+      <ion-col size="3"></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+
+      </ion-col>
+      <ion-col size="8">
         <ion-item>
-          <ion-input placeholder="Password"></ion-input>
+          <ion-label position="floating">Email ID</ion-label>
+          <ion-input type="Email"></ion-input>
         </ion-item>
-      </div>
-      </form>
-  </div>
-  <!-- login button -->
-  <div class="login-btn">
-    <ion-button color="dark">Login</ion-button>
-  </div>
+      </ion-col>
+      
+      <ion-col size="2">
 
-  <!-- new user signup content -->
-  <div class="lower-content">
-    <h6>New user ?<span style="color: var(--ion-color-primary);"> Signup</span></h6>
-  </div>
+      </ion-col>
+    </ion-row>
+    
+    <ion-row>
+      <ion-col size="2">
+
+      </ion-col>
+      <ion-col size="8">
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="2">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+         <br><br><br><br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+
+      </ion-col>
+      <ion-col size="4">
+        
+          <ion-button  fill="solid" expand="block" color="dark">Login</ion-button>
+        
+      </ion-col>
+      
+      <ion-col size="4">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+         <br><br><br><br><br><br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+
+      </ion-col>
+      <ion-col size="6">
+        <div class="lower-content">
+          <h6>New user ?<span style="color: var(--ion-color-primary);"> Signup</span></h6>
+        </div>
+      </ion-col>
+      <ion-col size="3">
+        
+      </ion-col>
+    </ion-row>
+    
+  </ion-grid>
 </ion-content>
+
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+         <br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+
+      </ion-col>
+      <ion-col size="8">
+        <h1 class="heading">Welcome Back!</h1>
+      </ion-col>
+      
+      <ion-col size="2">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size=3></ion-col>
+      <ion-col size="6">
+        <br><br>
+      <img src="../../../assets/NewLogoFinal.png">
+      <br><br>
+    </ion-col>
+      <ion-col size="3"></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+
+      </ion-col>
+      <ion-col size="8">
+        <ion-item>
+          <ion-label position="floating">Email ID</ion-label>
+          <ion-input type="Email"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="2">
+
+      </ion-col>
+    </ion-row>
+    
+    <ion-row>
+      <ion-col size="2">
+
+      </ion-col>
+      <ion-col size="8">
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="2">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+         <br><br><br><br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+
+      </ion-col>
+      <ion-col size="4">
+        
+          <ion-button  fill="solid" expand="block" color="dark">Login</ion-button>
+        
+      </ion-col>
+      
+      <ion-col size="4">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+         <br><br><br><br><br><br>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+
+      </ion-col>
+      <ion-col size="6">
+        <div class="lower-content">
+          <h6>New user ?<span style="color: var(--ion-color-primary);"> Signup</span></h6>
+        </div>
+      </ion-col>
+      <ion-col size="3">
+        
+      </ion-col>
+    </ion-row>
+    
+  </ion-grid>
+</ion-content>
+
