--- a/src/app/pages/profile/tab2.page.scss
+++ b/src/app/pages/profile/tab2.page.scss
@@ -85,20 +85,89 @@ ion-content{
 .topSpacing{
     padding-top: 14px;
 }
-
 #categoryButton {
     width: 120px;
     text-transform: none;
-    font-family: 'Quicksand' sans-serif;
-    font-size: 14px;
-    font-weight: 800;
     --box-shadow:none;
 }
 
-/*Post*/
+/*Post Heading*/
 #postHeading{
     font-family: 'Raleway', sans-serif;
     font-size: 24px;
     font-weight: 500;
     padding-top: 5px;
+}
+
+/*Post Card*/ 
+ion-card{
+    box-shadow: 0 !important;
+    background-color: var(--ion-color-white);
+}
+//Avatar
+#postAvatar{
+    border: 1px solid var(--ion-color-primary);
+    width: 60px;
+    height: 60px;
+
+}
+//userDetails, category and date
+#postUserNameAlignment h4{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 34px;
+    color:var(--ion-color-dark);
+}
+#postCategoryDateDetails{
+    padding-bottom: 16px !important;
+}
+#postCategoryDateDetails h4{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    color:var(--ion-color-warning);
+}
+#postCategoryDateDetails h4 span{
+    padding-left: 10px;
+    font-weight: normal;
+} 
+hr{
+    height: 8.5px; 
+    display: inline-block; 
+    border: 1px solid var(--ion-color-secondary);
+    margin-left: 6px !important;
+}
+//Post content
+#postContent{
+    font-family: 'Quicksand';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color:var(--ion-color-dark);
+}
+//Image responsiveness
+.img-responisve{
+    width: 100%;
+    height: 45%;
+    border-radius: 3px;
+    padding-bottom: 10px;
+}
+// post footer - star and comment
+.countStyle{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    background-color: var(--ion-color-white);
+    padding-top: 10px !important;
+    color:var(--ion-color-primary);
+}
+.iconResize{
+    zoom: 1.6;
+}
+#star{
+    padding-left: 75% !important; 
+}
+#comment {
+    padding-left: 3% !important;
 }
