--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<ion-header class="ion-no-border" [translucent]="true">
+<ion-header class="ion-no-border" >
   <ion-toolbar no-border class="closeIconResize">
     <!-- Close Icon -->
     <ion-icon slot="end" src="assets/icon/closeIcon.svg"></ion-icon>
@@ -30,7 +30,7 @@
         <ion-row id="userNameEdit">
           <!-- UserName -->
           <ion-col size="11" id="userName">
-            <ion-label class="noPaddingMarign">Poorvasha Murugavel</ion-label>
+            <ion-label class="noPaddingMargin">Poorvasha Murugavel</ion-label>
           </ion-col>
           <!-- Edit Icon -->
           <ion-col size="1" id="editIcon">
@@ -57,23 +57,23 @@
     </ion-row>
 
     <!-- Post -->
-    <ion-row class="topSpacing alignCenter noPaddingMarign">
+    <ion-row class=" alignCenter noPaddingMargin">
       <ion-card>
         <!-- Post Header -->
         <ion-card-header>
-          <ion-row class="noPaddingMarign">
+          <ion-row class="noPaddingMargin">
             <!-- Post Avatar -->
-            <ion-col size="3" class="noPaddingMarign">
+            <ion-col size="3" class="noPaddingMargin">
               <ion-avatar id="postAvatar"></ion-avatar>
             </ion-col>
             <!-- Post (UserName, Category, Date) -->
-            <ion-col size="9" class="noPaddingMarign">
+            <ion-col size="9" class="noPaddingMargin">
               <ion-row id="postUserNameAlignment" class="noPaddingMarign">
-                <h4 class="noPaddingMarign">Poorvasha</h4>
+                <h4 class="noPaddingMargin">Poorvasha</h4>
               </ion-row>
               <ion-row id="postCategoryDateDetails" class="noPaddingMarign">
-                <h4 class="noPaddingMarign">Science
-                  <hr class="noPaddingMarign">
+                <h4 class="noPaddingMargin">Science
+                  <hr class="noPaddingMargin">
                   <span>20th Jul,2020</span></h4>
               </ion-row>
             </ion-col>
@@ -84,20 +84,19 @@
         <!-- Post Content -->
         <ion-card-content id="postContent">
           There is nothing good or bad it’s all about the characterization
-          the more you express the more you are!
+          the more you express the more you are
         </ion-card-content>
-        <!-- Post Image -->
         <img src="../../../assets/B4-images/postImage.png" class="img-responisve">
         <!-- Post Content Ends -->
 
         <!-- Post Footer -->
-          <ion-row class="noPaddingMarign">
+          <ion-row class="noPaddingMargin">
             <!-- StarIcon with count -->
               <ion-icon class="iconResize" id="star" src="assets/icon/unstarIcon.svg"></ion-icon>
-              <ion-badge class="countStyle noPaddingMarign">99</ion-badge>
+              <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
             <!-- CommentIcon with count -->
               <ion-icon class="iconResize" id="comment" src="assets/icon/commentIcon.svg"></ion-icon>
-              <ion-badge class="countStyle noPaddingMarign" >100</ion-badge>
+              <ion-badge class="countStyle noPaddingMargin">30</ion-badge>
           </ion-row>
         <!-- Post Footer Ends -->
       </ion-card>
