--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -72,6 +72,12 @@
         </ion-item>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <img src="{{selectedImage}}" alt="" />
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
 
