--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -41,6 +41,7 @@
             interface="alert"
             class="select-category"
             okText="Ok"
+            [(ngModel)]="postDetails.category[0]"
           >
             <ion-select-option value="Science">Science</ion-select-option>
             <ion-select-option value="Technology">Technology</ion-select-option>
@@ -68,6 +69,7 @@
             autosize
             [attr.rows]="textAreaRows"
             placeholder="Express your thoughts..."
+            [(ngModel)]="postDetails.text"
           ></ion-textarea>
         </ion-item>
       </ion-col>
@@ -75,7 +77,7 @@
 
     <ion-row>
       <ion-col>
-        <img src="{{selectedImage}}" alt="" />
+        <img src="{{postDetails.image}}" alt="" />
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -96,7 +98,7 @@
         src="assets/icon/post-photo.svg"
       ></ion-icon>
     </ion-button>
-    <ion-button class="footer-button-Go" slot="end" fill="clear">
+    <ion-button class="footer-button-Go" slot="end" fill="clear" (click)="postTheContent()">
       <ion-icon
         class="footer-icon"
         slot="icon-only"
