[IMP] Login page: Resposiveness

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -6,3 +6,21 @@
 .lower-content{
     text-align: center;
 }
+
+img{
+    width: 100%;
+}
+
+
+.margin{
+    margin-top: 40px;
+}
+
+.signup{
+    margin-top: 50px;
+    //margin-bottom: 10% !important;
+}
+
+.error-message {
+    color: var(--ion-color-primary);
+}
