--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,113 +1,8 @@
-6<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-         <br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2">
-
-      </ion-col>
-      <ion-col size="8">
-        <h1 class="heading">Welcome Back!</h1>
-      </ion-col>
-      
-      <ion-col size="2">
-
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size=3></ion-col>
-      <ion-col size="6">
-        <br><br>
-      <img src="../../../assets/NewLogoFinal.png">
-      <br><br>
-    </ion-col>
-      <ion-col size="3"></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2">
-
-      </ion-col>
-      <ion-col size="8">
-        <ion-item>
-          <ion-label position="floating">Email ID</ion-label>
-          <ion-input type="Email"></ion-input>
-        </ion-item>
-      </ion-col>
-      
-      <ion-col size="2">
-
-      </ion-col>
-    </ion-row>
-    
-    <ion-row>
-      <ion-col size="2">
-
-      </ion-col>
-      <ion-col size="8">
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input type="password"></ion-input>
-        </ion-item>
-      </ion-col>
-      
-      <ion-col size="2">
-
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-         <br><br><br><br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4">
-
-      </ion-col>
-      <ion-col size="4">
-        
-          <ion-button  fill="solid" expand="block" color="dark">Login</ion-button>
-        
-      </ion-col>
-      
-      <ion-col size="4">
-
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-         <br><br><br><br><br><br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="3">
-
-      </ion-col>
-      <ion-col size="6">
-        <div class="lower-content">
-          <h6>New user ?<span style="color: var(--ion-color-primary);"> Signup</span></h6>
-        </div>
-      </ion-col>
-      <ion-col size="3">
-        
-      </ion-col>
-    </ion-row>
-    
-  </ion-grid>
-</ion-content>
-
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-col>
-         <br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
+
+    <ion-row class="margin">
       <ion-col size="2">
 
       </ion-col>
@@ -119,77 +14,77 @@
 
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row class="margin">
       <ion-col size=3></ion-col>
       <ion-col size="6">
-        <br><br>
-      <img src="../../../assets/NewLogoFinal.png">
-      <br><br>
+      
+      <img src="../../../assets/icon/favicon.png">
+    
     </ion-col>
       <ion-col size="3"></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col size="2">
 
-      </ion-col>
-      <ion-col size="8">
+
+
+
+
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
+      <ion-row class="margin">
+        <ion-col size="2"></ion-col>
+        <ion-col size="8">
+      <ion-list>
         <ion-item>
           <ion-label position="floating">Email ID</ion-label>
-          <ion-input type="Email"></ion-input>
+          <ion-input formControlName="email" type="Email"></ion-input>
         </ion-item>
-      </ion-col>
-      
-      <ion-col size="2">
-
-      </ion-col>
+        <div *ngFor="let error of errorMessages.email">
+          <ng-container *ngIf="email.hasError(error.type) && (email.dirty || email.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+      </ion-list>
+    </ion-col>
+    <ion-col size="2"></ion-col>
     </ion-row>
-    
-    <ion-row>
-      <ion-col size="2">
+      
+      
 
-      </ion-col>
+    <ion-row>
+      <ion-col size="2"></ion-col>
       <ion-col size="8">
+      <ion-list>
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input formControlName="password" type="password"></ion-input>
         </ion-item>
+        <div *ngFor="let error of errorMessages.password">
+          <ng-container *ngIf="password.hasError(error.type) && (password.dirty || password.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+        </ion-list>
       </ion-col>
-      
-      <ion-col size="2">
+      <ion-col size="2"></ion-col>
+      </ion-row>
 
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-         <br><br><br><br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4">
 
-      </ion-col>
-      <ion-col size="4">
-        
-          <ion-button  fill="solid" expand="block" color="dark">Login</ion-button>
-        
-      </ion-col>
-      
-      <ion-col size="4">
+          <ion-row class="margin">
+            <ion-col size="4"></ion-col>
+            <ion-col size="4">
+          <ion-button [disabled]="!loginForm.valid" type="submit" fill="solid" expand="block" color="dark" routerLink="/tabs/tab1" routerDirection="root">Login</ion-button>
+        </ion-col>
+        <ion-col size="4"></ion-col>
+        </ion-row>
+        </form>
 
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-         <br><br><br><br><br><br>
-      </ion-col>
-    </ion-row>
-    <ion-row>
+
+    <ion-row class="signup">
       <ion-col size="3">
 
       </ion-col>
       <ion-col size="6">
         <div class="lower-content">
-          <h6>New user ?<span style="color: var(--ion-color-primary);"> Signup</span></h6>
+          <h6>New user ?<span style="color: var(--ion-color-primary);" (click)="signup()"> Signup</span></h6>
         </div>
       </ion-col>
       <ion-col size="3">
@@ -199,4 +94,3 @@
     
   </ion-grid>
 </ion-content>
-
