--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -30,12 +30,12 @@
 
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <ion-row class="margin">
-        <ion-col size="2"></ion-col>
-        <ion-col size="8">
+        <ion-col size="1"></ion-col>
+        <ion-col size="10">
       <ion-list>
         <ion-item>
-          <ion-label position="floating">Email ID</ion-label>
-          <ion-input formControlName="email" type="Email"></ion-input>
+          
+          <ion-input formControlName="email" type="Email" placeholder="Email ID"></ion-input>
         </ion-item>
         <div *ngFor="let error of errorMessages.email">
           <ng-container *ngIf="email.hasError(error.type) && (email.dirty || email.touched)">
@@ -44,18 +44,18 @@
         </div>
       </ion-list>
     </ion-col>
-    <ion-col size="2"></ion-col>
+    <ion-col size="1"></ion-col>
     </ion-row>
       
       
 
     <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col size="8">
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
       <ion-list>
         <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input formControlName="password" type="password"></ion-input>
+          
+          <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
         </ion-item>
         <div *ngFor="let error of errorMessages.password">
           <ng-container *ngIf="password.hasError(error.type) && (password.dirty || password.touched)">
@@ -64,7 +64,7 @@
         </div>
         </ion-list>
       </ion-col>
-      <ion-col size="2"></ion-col>
+      <ion-col size="1"></ion-col>
       </ion-row>
 
 
