--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,41 +1,136 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
-<ion-content fullscreen>
-  <h1>Create Account</h1>
-  <div class="center">
+<ion-content>
+  <ion-grid>
 
-    <!-- Username input -->
-    <div class="uname">
-      <ion-item>
-        <ion-input placeholder="User Name"></ion-input>
-      </ion-item>
-    </div>
+    <ion-row class="margin">
+      <ion-col size="2">
 
-    <!-- Password input -->
-    <div class="email">
-      <ion-item>
-        <ion-input placeholder="Email ID"></ion-input>
-      </ion-item>
-    </div>
+      </ion-col>
+      <ion-col size="8">
+        <h1 class="heading">Create Account</h1>
+      </ion-col>
+      
+      <ion-col size="2">
 
-    <div class="password">
-      <ion-item>
-        <ion-input placeholder="Password"></ion-input>
-      </ion-item>
-    </div>
+      </ion-col>
+    </ion-row>
+    <ion-row class="margin">
+      <ion-col size=3></ion-col>
+      <ion-col size="6">
+      
+      <img src="../../../assets/icon/favicon.png">
+    
+    </ion-col>
+      <ion-col size="3"></ion-col>
+    </ion-row>
 
-    <div class="password">
-      <ion-item>
-        <ion-input placeholder="Confirm Password"></ion-input>
-      </ion-item>
-    </div>
-  </div>
-  <!-- login button -->
-  <div class="login-btn">
-    <ion-button color="dark">Signup</ion-button>
-  </div>
 
-  <!-- new user signup content -->
-  <div class="lower-content">
-    <h6>Already a user ?<span style="color: var(--ion-color-primary);"> Login</span></h6>
-  </div>
+
+
+
+    <form [formGroup]="signupForm" (ngSubmit)="submit()">
+
+
+      <ion-row class="margin">
+        <ion-col size="1"></ion-col>
+        <ion-col size="10">
+      <ion-list>
+        <ion-item>
+          
+          <ion-input formControlName="username" type="text" placeholder="Username"></ion-input>
+        </ion-item>
+        <div *ngFor="let error of errorMessages.username">
+          <ng-container *ngIf="username.hasError(error.type) && (username.dirty || username.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+      </ion-list>
+    </ion-col>
+    <ion-col size="1"></ion-col>
+    </ion-row>
+
+
+      <ion-row class="margin">
+        <ion-col size="1"></ion-col>
+        <ion-col size="10">
+      <ion-list>
+        <ion-item>
+          
+          <ion-input formControlName="email" type="Email" placeholder="Email ID"></ion-input>
+        </ion-item>
+        <div *ngFor="let error of errorMessages.email">
+          <ng-container *ngIf="email.hasError(error.type) && (email.dirty || email.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+      </ion-list>
+    </ion-col>
+    <ion-col size="1"></ion-col>
+    </ion-row>
+      
+      
+
+    <ion-row class="margin">
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
+      <ion-list>
+        <ion-item>
+          
+          <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
+        </ion-item>
+        <div *ngFor="let error of errorMessages.password">
+          <ng-container *ngIf="password.hasError(error.type) && (password.dirty || password.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+        </ion-list>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      </ion-row>
+
+
+      <ion-row class="margin">
+        <ion-col size="1"></ion-col>
+        <ion-col size="10">
+      <ion-list>
+        <ion-item>
+          
+          <ion-input formControlName="cpassword" type="password" placeholder="Confirm password"></ion-input>
+        </ion-item>
+        <div *ngFor="let error of errorMessages.cpassword">
+          <ng-container *ngIf="cpassword.hasError(error.type) && (cpassword.dirty || cpassword.touched)">
+            <small class="error-message">{{error.message}}</small>
+          </ng-container>
+        </div>
+      </ion-list>
+    </ion-col>
+    <ion-col size="1"></ion-col>
+    </ion-row>
+
+
+          <ion-row class="margin">
+            <ion-col size="4"></ion-col>
+            <ion-col size="4">
+          <ion-button [disabled]="!signupForm.valid" type="submit" fill="solid" expand="block" color="dark" routerLink="/tabs/tab1" routerDirection="root">Sign up</ion-button>
+        </ion-col>
+        <ion-col size="4"></ion-col>
+        </ion-row>
+        </form>
+
+
+    <ion-row class="signup">
+      <ion-col size="3">
+
+      </ion-col>
+      <ion-col size="6">
+        <div class="lower-content">
+          <h6>New user ?<span style="color: var(--ion-color-primary);" (click)="signup()"> Signup</span></h6>
+        </div>
+      </ion-col>
+      <ion-col size="3">
+        
+      </ion-col>
+    </ion-row>
+    
+  </ion-grid>
 </ion-content>
