--- a/src/app/modals/feed-comments/feed-comments.page.html
+++ b/src/app/modals/feed-comments/feed-comments.page.html
@@ -1,5 +1,5 @@
 
-
+<ion-app>
 <ion-content>
  
 
@@ -8,15 +8,20 @@
     <!-- row-01 -->
     <ion-row>
       <!-- col-01 for heading -->
-      <ion-col size="4">
+      <ion-col size="8">
           <div id="headingStyle">
             <p class="heading-text-color">Comments</p>
           </div>
       </ion-col>
       <!-- col-02 for cancel-icon -->
-      <ion-col size="8">  
-          <div id="cancel-icon">
-              <ion-icon src="../../../assets/icon/cancel-icon.svg"></ion-icon>
+      <ion-col size="4">  
+          <div class = "cancel-icon">
+            <!-- ripple effect -->
+            <div class="ion-activatable ripple">
+                <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
+                <!-- cancel icon -->
+                <ion-icon src="../../../assets/icon/cancel-icon.svg" id="cancel-padd"> </ion-icon> 
+            </div>     
           </div>
       </ion-col>
     </ion-row>
@@ -31,7 +36,7 @@
       <!-- row-01 - comment 01-->
       <ion-row class="comment">
           <!-- col-01 for avatar -->
-          <ion-col size="1.5">
+          <ion-col size="1.7vw">
             <div id="avatar-align-center">
               <ion-avatar>
                 <img src="../../../assets/icon/userProfile-icon.svg">
@@ -40,7 +45,7 @@
           </ion-col>
 
           <!-- col-02 for userName and usercomments -->
-          <ion-col size="10.5">
+          <ion-col size="10.3">
             <!-- userName -->
             <div class="userName heading-text-color">
               <p>Ramya Venkatesh</p>
@@ -58,7 +63,7 @@
       <!-- row-02 - comment 02 -->
       <ion-row class="comment">
           <!-- col-01 for avatar -->
-          <ion-col size="1.5">
+          <ion-col size="1.7vw">
             <div id="avatar-align-center">
               <ion-avatar>
                 <img src="../../../assets/icon/userProfile-icon.svg">
@@ -67,7 +72,7 @@
           </ion-col>
       
           <!-- col-02 for userName and usercomments -->
-          <ion-col size="10.5">
+          <ion-col size="10.3">
             <!-- userName -->
             <div class="userName heading-text-color">
               <p>Poorvasha Murugavel</p>
@@ -109,7 +114,12 @@
             <!-- col-02 for cancel-icon -->
             <ion-col size="2">  
               <div id="send-icon">
-                  <ion-icon src="../../../assets/icon/send.svg"></ion-icon>
+                  <!-- ripple effect -->
+                  <div class="ion-activatable ripple">
+                      <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
+                      <!-- send icon -->
+                      <ion-icon src="../../../assets/icon/send-icon.svg" id="send-padd"> </ion-icon> 
+                  </div>     
               </div>
             </ion-col>
     
@@ -122,3 +132,4 @@
 
 
 </ion-content>
+</ion-app>
