[IMP] SettingModule : Ripple effect added.

--- a/src/app/modals/feed-comments/feed-comments.page.scss
+++ b/src/app/modals/feed-comments/feed-comments.page.scss
@@ -10,6 +10,7 @@
 ion-grid{
     margin: 10px 20px!important;
 }
+// ripple effect for icon
 .ripple{
     position: relative;
     overflow: hidden;
