--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -23,7 +23,7 @@
             <div class="ion-activatable ripple">
                 <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
                 <!-- cancel icon -->
-                <ion-icon src="../../../assets/icon/cancel-icon.svg" id="cancel-padd"> </ion-icon> 
+                <ion-icon src="../../../assets/icon/cancel-icon.svg"> </ion-icon> 
             </div>     
         </div>
       </ion-col>
@@ -69,8 +69,8 @@
       <!-- ripple effect -->
     <div class="ion-activatable ripple">
       <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
-      <!-- cancel icon -->
-      <ion-icon src="../../../assets/icon/logout.svg" id="cancel-padd"> </ion-icon> 
+      <!-- logout icon -->
+      <ion-icon src="../../../assets/icon/logout.svg"> </ion-icon> 
     </div>     
 </div>
 
