--- a/src/app/pages/home/tab1.page.scss
+++ b/src/app/pages/home/tab1.page.scss
@@ -7,7 +7,12 @@ ion-grid{
 .large-text-color{
     color: var(--ion-color-dark);
 }
-
+// ripple effect for icon
+.ripple{
+    position: relative;
+    overflow: hidden;
+    color: var(--ion-color-secondary);
+}
 /*=========================================================
                         Header
 ==========================================================*/
@@ -23,20 +28,24 @@ ion-grid{
 }
 // setting icon
 #setting-icon{
-    zoom: 1.3;
+    zoom: 1.4;
     display: flex;
     justify-content: flex-end;
-    margin-top: 9px;
+    padding: 7px 7px;
 }
+
 /*=========================================================
                         Not Found
 ==========================================================*/
 // to bring overall content center
-#grid-not-found{
-    margin: 35% 70px 50% 70px;
+#center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
 }
 // to bring image center
-.align-center{
+.align-items-center{
     text-align: center;
 }
 // text style
